--- a/style.css
+++ b/style.css
@@ -15,14 +15,18 @@ body {
   width: 30vw;
   color: white;
   background-color: #000000;
+  white-space: normal;
+  word-break: break-all;
 }
 
 #calculation {
-  display: flex;
+  display: inline-block;
   justify-content: baseline;
   align-items: end;
   width: 60%;
   font-size: 3em;
+  white-space: normal;
+  word-break: break-all;
 }
 
 #calculation-result {
@@ -56,7 +60,7 @@ body {
 #subtraction-button,
 #one-button,
 #two-button,
-#one-button,
+#three-button,
 #addition-button,
 #zero-button,
 #reset-button,
@@ -75,7 +79,7 @@ body {
 #six-button,
 #one-button,
 #two-button,
-#one-button,
+#three-button,
 #zero-button,
 #reset-button,
 #division-button {
@@ -92,7 +96,7 @@ body {
 #subtraction-button,
 #one-button,
 #two-button,
-#one-button,
+#three-button,
 #addition-button {
   margin-bottom: 1vh;
 }
